remove tests from release artifacts