@@ -8,8 +8,4 @@ echo "Java version $jvm_version"
 
 cd "$(dirname "$0")"
 
-if [[ "$jvm_version" -gt "8" ]]; then
-  clojure -J--add-opens=java.base/java.nio=ALL-UNNAMED -J--add-opens=java.base/sun.nio.ch=ALL-UNNAMED -J--illegal-access=permit -X test-jar.core/run
-else
-  clojure -X test-jar.core/run
-fi
+clojure -J--add-opens=java.base/java.nio=ALL-UNNAMED -J--add-opens=java.base/sun.nio.ch=ALL-UNNAMED -M -m test-jar.core
